Change apps in normal gapps

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 <!--    dankoman   : Daniel Koman                                            -->
 <!--    victorlapin: Victor Lapin                                            -->
 <!--    raulx222   : Raul Petru                                              -->
-<!--    uzen  	   : Dmitry Popov                                            -->
+<!--    uzen       : Dmitry Popov                                            -->
 <!--                                                                         -->
 <!--=========================================================================-->
 <project name="buildGapps"
@@ -39,11 +39,11 @@
   <property name="sign.jar"                     value="${app.dir}/tools/signapk.jar"/>
   <property name="sign.pem"                     value="${app.dir}/tools/testkey.x509.pem"/>
   <property name="sign.pk8"                     value="${app.dir}/tools/testkey.pk8"/>
-  
-  <tstamp>  
+
+  <tstamp>
     <format property="build.today" pattern="yyyyMMdd" />
-  </tstamp>  
-    
+  </tstamp>
+
   <!--=======================================================================-->
   <!-- complete build                                                        -->
   <!--=======================================================================-->
@@ -68,34 +68,34 @@
         <fileset dir="${structure.dir}">
           <include name="META-INF/**" />
           <include name="system/app/ConfigUpdater/**" />
-		  <include name="system/app/ExchangeServices/**" />
-		  <include name="system/app/GoogleCalendarSyncAdapter/**" />
-		  <include name="system/app/GoogleContactsSyncAdapter/**" />
-		  <include name="system/etc/**" />
-		  <include name="system/framework/**" />
-		  <include name="system/lib/**" />
-		  <include name="system/priv-app/GoogleBackupTransport/**" />
-		  <include name="system/priv-app/GoogleFeedback/**" />
-		  <include name="system/priv-app/GoogleLoginService/**" />
-		  <include name="system/priv-app/GoogleOneTimeInitializer/**" />
-		  <include name="system/priv-app/GooglePartnerSetup/**" />
-		  <include name="system/priv-app/GoogleServicesFramework/**" />
-		  <include name="system/priv-app/Phonesky/**" />
-		  <include name="system/priv-app/PrebuiltGmsCore/**" />
-		  <include name="system/priv-app/SetupWizard/**" />
+          <include name="system/app/ExchangeServices/**" />
+          <include name="system/app/GoogleCalendarSyncAdapter/**" />
+          <include name="system/app/GoogleContactsSyncAdapter/**" />
+          <include name="system/etc/**" />
+          <include name="system/framework/**" />
+          <include name="system/lib/**" />
+          <include name="system/priv-app/GoogleBackupTransport/**" />
+          <include name="system/priv-app/GoogleFeedback/**" />
+          <include name="system/priv-app/GoogleLoginService/**" />
+          <include name="system/priv-app/GoogleOneTimeInitializer/**" />
+          <include name="system/priv-app/GooglePartnerSetup/**" />
+          <include name="system/priv-app/GoogleServicesFramework/**" />
+          <include name="system/priv-app/Phonesky/**" />
+          <include name="system/priv-app/PrebuiltGmsCore/**" />
+          <include name="system/priv-app/SetupWizard/**" />
         </fileset>
     </copy>
-	<copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
+    <copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
         <filterchain>
           <replaceregex pattern="@package@" replace="zero" flags="i"/>
           <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
           <linecontains negate="true">
-				<contains value="#zero"/>
+                <contains value="#zero"/>
           </linecontains>
         </filterchain>
     </copy>
 
-    <!-- generate backup script --> 
+    <!-- generate backup script -->
     <fileset id="item.file" dir="${work.dir}/system" includes="**/*.*" />
     <pathconvert refid="item.file" property="file.list.zero" pathsep="&#10;" dirsep="/">
         <map from="${work.dir}/system/" to=''/>
@@ -106,7 +106,7 @@
         </filterchain>
     </copy>
 
-    <!-- zip and sign it --> 
+    <!-- zip and sign it -->
     <antcall target="ZipAndSigning">
         <param name="hfile.name" value="${file.name.zero}"/>
     </antcall>
@@ -155,14 +155,14 @@
           <exclude name="optional/face/**"/>
         </fileset>
     </copy>
-	<copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
+    <copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
         <filterchain>
           <replaceregex pattern="@package@" replace="mini" flags="i"/>
-		  <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
+          <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
         </filterchain>
     </copy>
 
-    <!-- generate backup script --> 
+    <!-- generate backup script -->
     <fileset id="item.file" dir="${work.dir}/system" includes="**/*.*" />
     <pathconvert refid="item.file" property="file.list.mini" pathsep="&#10;" dirsep="/">
         <map from="${work.dir}/system/" to=''/>
@@ -197,20 +197,26 @@
           <exclude name="system/app/Books/**"/>
           <exclude name="system/app/Docs/**"/>
           <exclude name="system/app/Games/**"/>
+          <exclude name="system/app/GoogleTTS/**"/>
+          <exclude name="system/app/Maps/**"/>
           <exclude name="system/app/Movies/**"/>
           <exclude name="system/app/Newsstand/**"/>
           <exclude name="system/app/Sheets/**"/>
           <exclude name="system/app/Slides/**"/>
+          <exclude name="system/app/Street/**"/>
+          <exclude name="system/app/Translate/**"/>
+          <exclude name="system/app/Wallet/**"/>
+          <exclude name="system/tts/**"/>
       </fileset>
     </copy>
-	<copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
+    <copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
         <filterchain>
           <replaceregex pattern="@package@" replace="normal" flags="i"/>
-		  <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
+          <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
         </filterchain>
     </copy>
 
-    <!-- generate backup script --> 
+    <!-- generate backup script -->
     <fileset id="item.file" dir="${work.dir}/system" includes="**/*.*" />
     <pathconvert refid="item.file" property="file.list.normal" pathsep="&#10;" dirsep="/">
         <map from="${work.dir}/system/" to=''/>
@@ -226,7 +232,7 @@
     </antcall>
 
   </target>
-  
+
   <!--=======================================================================-->
   <!-- full                                                               -->
   <!--=======================================================================-->
@@ -241,14 +247,14 @@
     </propertyfile>
     <!-- copy files -->
     <copy todir="${work.dir}"><fileset dir="${structure.dir}"/></copy>
-	<copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
+    <copy file="${app.dir}/extras/updater-script" todir="${work.dir}/META-INF/com/google/android">
         <filterchain>
           <replaceregex pattern="@package@" replace="full" flags="i"/>
-		  <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
+          <replaceregex pattern="@cleanup.list@" replace="${cleanup.list}" flags="i"/>
         </filterchain>
     </copy>
 
-    <!-- generate backup script --> 
+    <!-- generate backup script -->
     <fileset id="item.file" dir="${work.dir}/system" includes="**/*.*" />
     <pathconvert refid="item.file" property="file.list.full" pathsep="&#10;" dirsep="/">
         <map from="${work.dir}/system/" to=''/>
@@ -264,14 +270,14 @@
     </antcall>
 
   </target>
-  
+
   <!--=======================================================================-->
   <!-- generate clean up list                                                     -->
   <!--=======================================================================-->
   <target name="generateCleanUpList">
     <fileset id="cleanup.file" dir="${structure.dir}/system" includes="**/*.*" />
-	<pathconvert refid="cleanup.file" property="cleanup.list" pathsep="&quot;,&#10;&quot;" dirsep="/">
-		<map from="${structure.dir}/system/" to="/system/"/>
+    <pathconvert refid="cleanup.file" property="cleanup.list" pathsep="&quot;,&#10;&quot;" dirsep="/">
+        <map from="${structure.dir}/system/" to="/system/"/>
     </pathconvert>
   </target>
 
@@ -327,6 +333,6 @@
       <property name="x.dir" value="test9899"/>
       <echo message="${x.dir}"/>
   </target>
-    
-    
+
+
 </project>
