Update apps included in normal build

--- a/build.xml
+++ b/build.xml
@@ -133,9 +133,9 @@
           <exclude name="system/app/CameraGoogle/**"/>
           <exclude name="system/app/Chrome/**"/>
           <exclude name="system/app/CloudPrint/**"/>
+          <exclude name="system/app/ConfigUpdater/**"/>
           <exclude name="system/app/Docs/**"/>
           <exclude name="system/app/Drive/**"/>
-          <exclude name="system/app/Games/**"/>
           <exclude name="system/app/GenieWidget/**"/>
           <exclude name="system/app/GoogleHome/**"/>
           <exclude name="system/app/GoogleTTS/**"/>
@@ -147,9 +147,7 @@
           <exclude name="system/app/Newsstand/**"/>
           <exclude name="system/app/Sheets/**"/>
           <exclude name="system/app/Slides/**"/>
-          <exclude name="system/app/Street/**"/>
           <exclude name="system/app/Translate/**"/>
-          <exclude name="system/app/Wallet/**"/>
           <exclude name="system/tts/**"/>
           <exclude name="system/usr/**"/>
           <exclude name="optional/face/**"/>
